# yet-another-engine

./: CMakeLists.txt
include/yae/: directional_light.hpp  material.hpp  mesh.hpp  point_light.hpp  skybox.hpp  spot_light.hpp  vertex.hpp  window.hpp
include/yae/gl/: buffer.hpp  cube_map.hpp  error_utils.hpp  index_buffer.hpp  shader.hpp  shader_program.hpp  texture.hpp  type_utils.h  vertex_array.hpp
include/yae/math/: matrix.hpp  quaternion.hpp  transform.hpp
include/yae/pil/: file_utils.hpp  string_utils.hpp
include/yae/utils/: counter.hpp
model/: cube.mtl  monkey_new.mtl
shader/: shader.frag  shader.vert  skybox.frag  skybox.vert
src/: cube_map.cpp  directional_light.cpp  index_buffer.cpp  material.cpp  mesh.cpp  point_light.cpp  shader.cpp  shader_program.cpp  skybox.cpp  spot_light.cpp  texture.cpp  vertex.cpp  vertex_array.cpp  window.cpp
test/: math_test.cpp  model_test.cpp
